--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Genellikle uygulanacak temel stiller */
 *,
 *::before,
 *::after {
@@ -93,7 +92,6 @@ input[type="checkbox"]:checked::before {
   left: 0;
 }
 
-/* Check Box Css End */
 
 .container {
   margin: 0 auto;
@@ -244,7 +242,6 @@ h1 {
   color: #9495A5;
 }
 
-/* Mobil Cihazlar için Stil Ayarları */
 @media (max-width: 768px) {
   body {
     background-image: url(/src/assets/img/mobileBGLight.png);
@@ -252,24 +249,24 @@ h1 {
 
   .container {
     margin: 0 auto;
-    width: 90%; /* Mobilde tam genişlik için % ile ayarladık */
+    width: 90%; 
   }
 
   .createTodo {
     background-color: #fff;
     padding: 14px 20px;
-    margin-top: 0; /* Negatif margin kaldırıldı */
-    margin-inline: auto; /* Otomatik hizalama */
+    margin-top: 0;
+    margin-inline: auto;
   }
 
   .header {
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-inline: 20px; /* Daha küçük bir padding ayarlandı */
+    padding-inline: 20px; 
   }
 
   .hero {
-    width: 100%; /* Tam genişlik ayarlandı */
+    width: 100%; 
     margin: 0 auto;
   }
 
@@ -283,11 +280,11 @@ h1 {
   }
 
   .interactiveDesktop {
-    display: none; /* Mobilde gizleniyor */
+    display: none; 
   }
 
   .interactive {
-    display: block; /* Mobilde görünür */
+    display: block; 
     margin-top: 16px;
     margin-bottom: 40px;
     padding-block: 15px;
